# xserver

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/xserver/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/xserver/: MainActivity.java
android/app/src/main/java/com/linyou/xserver/: XServer.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/xserver/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
linux/: CMakeCache.txt  Makefile  XServer  cmake_install.cmake
src/: ctrl.cpp  ctrl.h  main.cpp
src/core/: CMakeLists.txt  app.cpp  app.h  common.h
src/core/engine/: engine.cpp  engine.h  enginecentor.cpp  enginecentor.h
src/core/http/: httplib.cpp  httplib.h  openssl.cpp  openssl.h  serviceclient.cpp  serviceclient.h  serviceserver.cpp  serviceserver.h
src/core/open/: open.h  openbuffer.cpp  openbuffer.h  opencsv.cpp  opencsv.h  openfile.cpp  openfile.h  openjson.cpp  opensocket.cpp  opensocket.h  openstring.cpp  openstring.h  opentime.cpp  opentime.h
src/core/platform/: android.cpp  convertutf.c  jnihelper.cpp  jnihelper.h  linux.cpp  net.h  utf8.cpp  utf8.h  utils-win32.cpp  utils-win32.h  win32.cpp
src/core/robot/: event.cpp  event.h  robot.cpp  robot.h  robotcentor.cpp  robotcentor.h
src/core/service/: service.cpp  service.h  servicecentor.cpp  servicecentor.h
src/core/socket/: eventsocket.cpp  eventsocket.h  servicesocket.cpp  servicesocket.h  socketcentor.cpp  socketcentor.h  socketserver.cpp  socketserver.h
src/core/timer/: servicetimer.cpp  servicetimer.h
src/core/utils/: cache.cpp  cache.h  common.h  config.cpp  config.h  logger.cpp  logger.h  spinlock.h  tool.h
src/service/: CMakeLists.txt
src/service/httpclient/: service.cpp  service.h
src/service/httpserver/: handle.h  http_util.h  service.cpp  service.h
src/service/tcpclient/: service.cpp  service.h
src/service/tcpserver/: service.cpp  service.h
src/service/test/: handle.h  service.cpp  service.h
src/service/testa/: handle.h  service.cpp  service.h
src/service/testb/: handle.h  service.cpp  service.h
src/service/udpdevice/: data.h  device.cpp  device.h  event.h  handle.h  service.cpp  service.h
src/service/udpport/: data.h  device.cpp  device.h  event.h  handle.h  service.cpp  service.h
src/utils/: CMakeLists.txt  app.cpp  app.h  event.h  events.h  robotid.h
win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  XServer.sln  XServer.vcxproj  XServer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
